--- a/task3/index.html
+++ b/task3/index.html
@@ -5,29 +5,51 @@
   <title>Document</title>
 </head>
   <style>
-    #container{
-      border:1px solid black;
-      overflow: hidden;
+    *{
+      padding: 20px;
     }
-    #container div{
+    div{
+        border:1px solid #999;
+    }
+    #container{
+      overflow: hidden;
+      background-color: #eee;
+    }
+    #left, #right{
       margin: 20px;
-      background-color: gray;
     }
     #left{
-      width: 200px;
-      height: 120px;
+      width: 158px;
+      height: 78px;
       float: left;
+
     }
     #right{
-      width:120px;
-      height:420px;
+      width:78px;
+      height:378px;
       float: right;
+    }
+    #main{
+      margin: 20px 160px 20px 240px
+    }
+    .logo{
+      width:40px;
+      height:40px;
+      background-color: gray;
+      text-align: center;
     }
   </style>
 <body>
   <div id="container">
-    <div id="left"></div>
-    <div id="right"></div>
+    <div id="left">
+      <div class="logo">logo</div>
+    </div>
+    <div id="right">
+      <div class="logo">logo</div>
+      <div class="logo"></div>
+      <div class="logo"></div>
+      <div class="logo"></div>
+    </div>
     <div id="main">test</div>
   </div>
 </body>
