--- a/task3/index.html
+++ b/task3/index.html
@@ -17,6 +17,7 @@
     }
     #left, #right{
       margin: 20px;
+      background-color: white;
     }
     #left{
       width: 158px;
@@ -27,16 +28,19 @@
     #right{
       width:78px;
       height:378px;
-      float: right;
+      float: left;
     }
     #main{
-      margin: 20px 160px 20px 240px
+      margin: 20px 160px 20px 240px;
+      background-color: white;
+      float: left;
     }
     .logo{
-      width:40px;
-      height:40px;
+      width:38px;
+      height:38px;
       background-color: gray;
       text-align: center;
+      margin-bottom: 10px;
     }
   </style>
 <body>
@@ -46,11 +50,13 @@
     </div>
     <div id="right">
       <div class="logo">logo</div>
-      <div class="logo"></div>
-      <div class="logo"></div>
-      <div class="logo"></div>
+      <div class="logo">logo</div>
+      <div class="logo">logo</div>
+      <div class="logo">logo</div>
     </div>
-    <div id="main">test</div>
+    <div id="main">
+      <p>testtesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttest</p>
+    </div>
   </div>
 </body>
 </html>
