--- a/task3/index.html
+++ b/task3/index.html
@@ -9,9 +9,10 @@
       padding: 20px;
     }
     div{
-        border:1px solid #999;
+      border:1px solid #999;
     }
     #container{
+      /*用于清除浮动*/
       overflow: auto;
       background-color: #eee;
     }
@@ -28,27 +29,32 @@
     #right{
       width:78px;
       height:378px;
-      float: left;
-    }
-    #main{
-      margin: 20px 160px 20px 240px;
-      background-color: white;
-      float: left;
-      display: block;
+      float: right;
     }
     .logo{
       width:38px;
       height:38px;
+      background-color: gray;
       text-align: center;
-      margin-bottom: 20px;
-      background-color: #eee;
+      margin-bottom: 10px;
     }
+  @media screen and (min-width:600px) {
+    #main{
+      margin: 20px 160px 20px 240px;
+      background-color: white;
+      overflow: hidden;
+    }
+  }
+  @media screen and (max-width:599px) {
+    #main{
+      margin: 20px;
+      background-color: white;
+      float: left;
+    }
+  }
   </style>
 <body>
   <div id="container">
-    <div id="main">
-      <p>testtesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttest</p>
-    </div>
     <div id="left">
       <div class="logo">logo</div>
     </div>
@@ -58,7 +64,9 @@
       <div class="logo">logo</div>
       <div class="logo">logo</div>
     </div>
-
+    <div id="main">
+      <p>div 是一个标准的块级元素。一个块级元素会新开始一行并且尽可能撑满容器。其他常用的块级元素包括 p 、 form 和HTML5中的新元素： header 、 footer 、 section 等等。div 是一个标准的块级元素。一个块级元素会新开始一行并且尽可能撑满容器。其他常用的块级元素包括 p 、 form 和HTML5中的新元素： header 、 footer 、 section 等等。div 是一个标准的块级元素。一个块级元素会新开始一行并且尽可能撑满容器。其他常用的块级元素包括 p 、 form 和HTML5中的新元素： header 、 footer 、 section 等等。div 是一个标准的块级元素。一个块级元素会新开始一行并且尽可能撑满容器。其他常用的块级元素包括 p 、 form 和HTML5中的新元素： header 、 footer 、 section 等等。</p>
+    </div>
   </div>
 </body>
 </html>
