--- a/task3/index.html
+++ b/task3/index.html
@@ -28,7 +28,7 @@
     }
     #right{
       width:78px;
-      height:378px;
+      height: 388px;
       float: right;
     }
     .logo{
@@ -38,6 +38,12 @@
       text-align: center;
       margin-bottom: 10px;
     }
+    img{
+      padding: 0px;
+      margin: 0 0 20px 0;
+      width: 80px;
+      height: 80px;
+    }
   @media screen and (min-width:600px) {
     #main{
       margin: 20px 160px 20px 240px;
@@ -45,24 +51,29 @@
       overflow: hidden;
     }
   }
-  @media screen and (max-width:599px) {
+  @media screen and (min-width:300px) and (max-width:599px) {
     #main{
       margin: 20px;
       background-color: white;
       float: left;
     }
   }
+  @media screen and (max-width:299px){
+    *{
+      display: none;
+    }
+  }
   </style>
 <body>
   <div id="container">
     <div id="left">
-      <div class="logo">logo</div>
+      <img src="img/logo.png" alt="HeyJax team logo">
     </div>
     <div id="right">
-      <div class="logo">logo</div>
-      <div class="logo">logo</div>
-      <div class="logo">logo</div>
-      <div class="logo">logo</div>
+      <img src="img/logo0.jpg" alt="HeyJax team logo">
+      <img src="img/logo1.png" alt="HeyJax team logo">
+      <img src="img/logo2.jpg" alt="HeyJax team logo">
+      <img src="img/logo3.jpg" alt="HeyJax team logo">
     </div>
     <div id="main">
       <p>div 是一个标准的块级元素。一个块级元素会新开始一行并且尽可能撑满容器。其他常用的块级元素包括 p 、 form 和HTML5中的新元素： header 、 footer 、 section 等等。div 是一个标准的块级元素。一个块级元素会新开始一行并且尽可能撑满容器。其他常用的块级元素包括 p 、 form 和HTML5中的新元素： header 、 footer 、 section 等等。div 是一个标准的块级元素。一个块级元素会新开始一行并且尽可能撑满容器。其他常用的块级元素包括 p 、 form 和HTML5中的新元素： header 、 footer 、 section 等等。div 是一个标准的块级元素。一个块级元素会新开始一行并且尽可能撑满容器。其他常用的块级元素包括 p 、 form 和HTML5中的新元素： header 、 footer 、 section 等等。</p>
