--- a/task4/index2.html
+++ b/task4/index2.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>task4</title>
-  <link rel="stylesheet" href="css/styles_1.css">
-</head>
+  <link rel="stylesheet" href="css/styles_3.css">
+  </head>
 <body>
+  <div class="wrap">
   <div class="container">
     <div id="circle1"></div>
     <div id="circle2"></div>
+  </div>
   </div>
 </body>
 </html>
