--- a/task01/index.html
+++ b/task01/index.html
@@ -17,7 +17,7 @@
 	<article>
 		<h1>文章一级标题</h1>
 		<h2>文章二级标题</h2>
-		<label>文章作者</label>&nbsp;<time>文章发表时间</time>
+		<span>文章作者</span>&nbsp;<time>文章发表时间</time>
 		<p>
 			我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。这里有个换行。<br>我正在做百度前端技术学院2016春季班的换行了<br>任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>我正在做百度前端技术学院2016春季班的任务一。<strong>这里有个粗体字。</strong>我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。<img src="./images/img.jpg" alt="一张图片"><br>我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我<br>正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正<strong>在做百度前端技术学院2016春季班</strong>我正在做百度前端技术学院2016春季班的任务一。<a href="http://ife.baidu.com" target="_blank">这里有一个链接点击后打开新窗口链接到http://ife.baidu.com</a>我正在做百度前端技术学院2016春季班的任务一。
 			我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。
@@ -26,7 +26,7 @@
 	<article>
 		<h1>另一篇文章一级标题</h1>
 		<h2>文章二级标题</h2>
-		<label>文章作者</label>&nbsp;<time>文章发表时间</time>
+		<span>文章作者</span>&nbsp;<time>文章发表时间</time>
 		<p>
 			我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。这里有个换行。<br>我正在做百度前端技术学院2016春季班的<br>任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>我正在做百度前端技术学院2016春季班的任务一。<strong>这里有个粗体字。</strong>我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。我正在做百度前端技术学院2016春季班的任务一。<img src="./images/img.jpg" alt="一张图片">
 			<ul>
@@ -35,20 +35,20 @@
 				<li>列表项目三</li>
 			</ul>
 			<h2>图片</h2>
-			<label>好看的图片</label>  <br>
+			<span>好看的图片</span>  <br>
 			<img src="./images/img.jpg"> <br>
-			<label>好看的图片</label> <br>
+			<span>好看的图片</span> <br>
 			<img src="./images/img.jpg"> <br>
-			<label>好看的图片</label> <br>
+			<span>好看的图片</span> <br>
 			<img src="./images/img.jpg"> <br>
-			<label>好看的图片</label> <br>
+			<span>好看的图片</span> <br>
 			<img src="./images/img.jpg"> <br>
 		</p>
 	</article>
 	<article>
 		<h1>最后一篇文章一级标题</h1>
 		<h2>文章二级标题</h2>
-		<label>文章作者</label>&nbsp;<time>文章发表时间</time>
+		<span>文章作者</span>&nbsp;<time>文章发表时间</time>
 		
 		<ol>
 			<li>排名1</li>
