--- a/task01/index.html
+++ b/task01/index.html
@@ -6,13 +6,15 @@
 </head>
 <body>
 	<header>
-	<h1>网站一级标题</h1>
-		<ul>
-		<li><a href="#">导航链接一</a></li>
-		<li><a href="#">导航链接二</a></li>
-		<li><a href="#">导航链接三</a></li>
-		<li><a href="#">导航链接四</a></li>
-		</ul>
+		<h1>网站一级标题</h1>
+		<nav>
+			<ul>
+			<li><a href="#">导航链接一</a></li>
+			<li><a href="#">导航链接二</a></li>
+			<li><a href="#">导航链接三</a></li>
+			<li><a href="#">导航链接四</a></li>
+			</ul>
+		</nav>
 	</header>		
 	<article>
 		<h1>文章一级标题</h1>
