modify some label to span and modify indent and add nav,modify section to aside

--- a/task01/index.html
+++ b/task01/index.html
@@ -96,7 +96,7 @@
 			</tfoot>
 		</table>
 	</article>
-	<section>
+	<aside>
 		<h1>侧栏标题，这里以后是一个侧栏</h1>
 		<h2>侧栏注册窗口标题</h2>
 		<form>
@@ -124,7 +124,7 @@
 			<textarea placeholder="这是一个多行输入框，输入你的个人描述"></textarea>
 			<input type="submit" value="确认提交"/>
 		</form>
-	</section>
+	</aside>
 	<footer>版权所有@</footer>
 </body>
 </html>
